<resources>
    <string name="app_name">DannyDroid</string>

    <string name="action_settings">Settings</string>
    <string name="DannyDroidTextView">DannyDroid</string>
    <string name="SinglePlayer">Single Player</string>
    <string name="MultiPlayer">Multi Player</string>
    <string name="Scores">Scores</string>
    <string name="Contacts">Contacts</string>
    <string name="title_activity_game">DannyDroid</string>
    <string name="title_activity_splash">Loading</string>
    <string name="title_activity_main">Welcome</string>
    <string name="score">Favorite</string>
    <string name="action_good">Thumbsup</string>
    <string name="hello">Daniel Lorenzo 2630 - 002</string>
    <string name="title_activity_game_over">GameOver! :\'(</string>
    <string name="title_activity_multi_player">2 Player</string>
    <string name="title_activity_score">Scores</string>
    <string name="action_search" />
    <string name="title_activity_text">TextActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>

</resources>
