<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <!--This is like a weight and the lower the number the higher the prioratie that gos first. -->
    <!--showAsAction means you can specify to "never" show or only show "ifroom" in the Action bar.
    However it will always show in the drop down menu.-->

    <item android:id="@+id/action_favorite"
        android:title="@string/score"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_favorite"
        />
    <item android:id="@+id/action_good.png"
        android:title="@string/action_good"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_good"
        />
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="300"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_search"
        />
    <item android:id="@+id/hello"
        android:title="@string/hello"
        android:orderInCategory="400"
        android:showAsAction="always"
        />

</menu>
