<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background"
    android:id="@+id/dannysLayout">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Transition"
        android:id="@+id/dannysbutton" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/DannyDroidTextView"
            android:id="@+id/dannyDroidTextView"
            android:layout_marginBottom="75dp"
            android:textSize="60sp"
            android:textColor="@color/yellow" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SinglePlayer"
            android:id="@+id/button"
            android:layout_marginBottom="10dp"
            android:onClick="startSinglePlayerGame"/>

        <!--When button pushed.-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MultiPlayer"
            android:id="@+id/button2"
            android:layout_marginBottom="10dp"
            android:onClick="startMultiPlayerGame"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Text Player"
            android:id="@+id/button4"
            android:layout_marginBottom="10dp"
            android:onClick="startTextPlayerGame"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Scores"
            android:id="@+id/button3"
            android:layout_marginBottom="10dp"
            android:onClick="openScores"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contacts"
            android:id="@+id/button5"
            android:layout_marginBottom="10dp"
            android:onClick="testing"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play Music Sound"
            android:id="@+id/playMusic"
            android:onClick="playMusic"/>

    </LinearLayout>
</RelativeLayout>
